# swiftie

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ghcr.yml  pr.yml
swiftie/: __main__.py  bot.py  config.py  converters.py  jdoodle.py
swiftie/cogs/: eval.py  event.py  events.py  misc.py
