[tool.poetry]
name = "swiftie"
version = "0.1.0"
description = "Discord bot for The Swift Programming Language community"
authors = ["evrensen467"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
